# ORB

./: .gitignore  CMakeLists.txt  ORBextractor.cpp  ORBextractor.h  README.md  evo_cons.py  main.cpp  settings.yaml
include/: 2Dimgeffects.h  CVFAST.h  Common.h  Comparison_Descriptors.h  Distribution.h  FAST.h  FASTworker.h  FeatureFileInterface.h  KdTree.h  ORBconstants.h  ORBextractor.h  Types.h  avx.h  main.h  referenceORB.h
saigacpy/: assert.cpp  assert.h  config.h  imageBase.h  managedImage.h  opencv.h  templatedImage.h
src/: 2Dimgeffects.cpp  CVFAST.cpp  Comparison_Descriptors.cpp  Comparison_Descriptors.h  Distribution.cpp  FAST.cpp  FAST.h  FeatureFileInterface.cpp  ORBextractor.cpp  ORBextractor.h  main.cpp  main.h  referenceORB.cpp
